# background-replacer

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  dvc.yaml  infer.py  pyproject.toml  train.py
background_replacer/: infer_pipeline.py  train_pipeline.py
background_replacer/data/: datamodule.py
background_replacer/models/: unet.py
background_replacer/utils/: transforms.py
configs/: config.yaml  data.yaml  model.yaml  train.yaml
scripts/: download_data.py  preprocess.py
