[tool.poetry]
name = "background-replacer"
version = "0.1.0"
description = "Service that allows you to change the background in video conferences"
authors = ["nikolaev jaroslav <nikolaev.iad@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.3"

[tool.black]
line-length = 88  # Можно изменить на любое значение, если нужно
target-version = ['py36']  # Задайте нужную версию Python

[tool.isort]
profile = "black"  # Используем профиль, совместимый с black
line_length = 88  # Подгоняем длину строки, чтобы она совпала с black

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
